[package]
name = "dss_homepage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1", features = ["full"] }
serde_json = "1.0.59"
serde = "1.0.59"
reqwest = {version = "0.11.10", features = ["blocking"] }
requests = "0.0.30"
gl = "0.10.0"
image = "0.24.1"

dss_models = { path = "../dss_models" }

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "ttf"]